调数值，盔甲加汰换，补点机制